# Deklarative-Programmierung-WS23-CAU-Kiel

./: .gitignore  fortprog.pl
H1/: Aufgaben.hs
H10/: A1.pl  A2.pl
H11/: A2.pl  A3.pl
H2/: Aufgaben.hs
H3/: Aufgaben.hs
H4/: A1.hs  A2.py  A3.hs  Aufgaben.hs
H5/: A1.hs  A2.hs  A3.hs  Aufgaben.hs
H6/: A1.hs  A2.hs  A3.hs  A4.hs
H7/: A1.hs  A2.hs  A3.hs  A4.hs  Prä.hs
H8/: A1.pl  A2.pl  A3.pl
H9/: A2.pl  A3.pl
deklprog-project/: Changelog.md  deklprog-project.cabal
deklprog-project/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
deklprog-project/examples/: family.pl  list.pl  rename.pl  uni.pl
deklprog-project/src/: Main.hs  Pretty.hs  Rename.hs  SLD.hs  Subst.hs  Unification.hs  Vars.hs
deklprog-project/src/Base/: IOHelper.hs  Parser.hs  Type.hs
